adjustments for next time

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -9,10 +9,10 @@
   <ol>
     <li><a href="1">jQuery Append</a></li>
     <li><a href="2">jQuery Loop</a></li>
-    <li><a href="3">Ajax Index</a></li>
-    <li><a href="4">Ajax Show</a></li>
-    <li><a href="5">Form Submission</a></li>
-    <li><a href="6">Ajax Submission</a></li>
+    <li><a href="3">AJAX Index (All Tweets)</a></li>
+    <li><a href="4">AJAX Show (Tweet by ID)</a></li>
+    <li><a href="5">HTML Form Submission</a></li>
+    <li><a href="6">AJAX Form Submission</a></li>
     <li><a href="7">Protected Route</a></li>
   </ol>
 
